--- a/usluge.html
+++ b/usluge.html
@@ -38,7 +38,10 @@
     <section class="usluge">
         <div class="red1">
             <div class="usluge-kol">
-                <h1>Personalni Treninzi</h1>
+                <div class="wrapper">
+                    <div class="bg">Personalni treninzi</div>
+                    <div class="fg">Personalni treninzi</div>
+                  </div>
                 <p> U <b>Max Gym-u</b>, naši personalni treninzi su osmišljeni da vam pomognu da postignete svoje fitnes ciljeve uz podršku iskusnih trenera. 
                     Bilo da želite da smršate, povećate mišićnu masu, poboljšate kondiciju ili se oporavite nakon povrede, naši treneri će kreirati plan 
                     treninga posebno za vas. Fokusiramo se na pravilnu tehniku izvođenja vežbi i efikasnost, kako biste brže postigli željene rezultate. 
@@ -54,7 +57,10 @@
                 <img id="idslika" src="IMG/grupnitr.jpg"> 
             </div>
             <div class="usluge-kol">
-                <h1>Grupni Treninzi</h1>
+                <div class="wrapper">
+                    <div class="bg">Grupni treninzi</div>
+                    <div class="fg">Grupni treninzi</div>
+                  </div>
                 <p>
                     Naši grupni treninzi pružaju zabavan i motivišući način da postignete svoje fitnes ciljeve zajedno sa drugima. Vođeni iskusnim trenerima, 
                     svaka sesija je osmišljena da bude raznovrsna i izazovna, prilagođena svim nivoima kondicije. Bilo da uživate u kardio vežbama, treningu snage, jogi ili HIIT-u, 
@@ -64,7 +70,10 @@
         </div>
         <div class="red1">
             <div class="usluge-kol">
-                <h1>Sauna i Spa</h1>
+                <div class="wrapper">
+                    <div class="bg">Sauna i Spa</div>
+                    <div class="fg">Sauna i Spa</div>
+                  </div>
                 <p>U <b>Max Gym-u</b>, osim vrhunskih treninga, možete se opustiti u našoj sauni i spa centru. Nakon napornog vežbanja, ništa ne prija više od opuštanja u sauni koja pomaže u detoksikaciji 
                     i smanjenju stresa. Naš spa centar nudi razne tretmane koji će vas osvežiti i revitalizovati. Bilo da želite masažu, tretman lica, ili jednostavno mirno mesto za opuštanje, 
                     naš spa je tu za vas. Pridružite se <b>Max Gym-u</b> i uživajte u iskustvu koje će poboljšati vaše telo i um.</p>
@@ -78,7 +87,10 @@
                 <img id="idslika" src="IMG/gymbar.jpg"> 
             </div>
             <div class="usluge-kol">
-                <h1>Max Gym bar</h1>
+                <div class="wrapper">
+                    <div class="bg">MaxGym bar</div>
+                    <div class="fg">MaxGym bar</div>
+                  </div>
                 <p>
                     Naš smoothie bar je savršeno mesto za osveženje posle treninga. Nudimo raznovrsne, ukusne i hranljive smoothie-je napravljene od svežih sastojaka koji će vam pomoći 
                     da se osvežite i napunite energijom. Bilo da vam je potreban proteinski napitak za oporavak mišića ili voćni smoothie prepun vitamina, imamo nešto za svakoga. Posetite naš smoothie bar 
